# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realityforge"
version = "1.1.0"
description = "ژنراتور کانفیگ Reality برای جامعه اینترنت آزاد ایران."
readme = "README.md"
authors = [{name = "Arash Aryapour", email = "arash.aryapour@proton.me"}]
license = {file = "LICENSE"}
keywords = ["v2ray", "reality", "vless", "config", "iran", "internet-freedom"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Security",
    "Topic :: Internet",
]
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/arash-aryapour/RealityForge"
"Bug Tracker" = "https://github.com/arash-aryapour/RealityForge/issues"

[project.scripts]
realityforge = "cli:app"
